[package]
name = "aes_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.1", optional = true }
cbc = { version = "0.1.2", optional = true }
rand = { version = "0.8.5", optional = true }
openssl = { version = "0.10.42", optional = true }

[features]
openssl = ["dep:openssl"]
aes_cbc = ["dep:aes", "dep:cbc", "dep:rand"]
all = ["dep:openssl","dep:aes", "dep:cbc", "dep:rand"]


